# EIPR-Portal

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  Makefile  deploy.md  docker-compose.billing.yml  docker-compose.health.yml  docker-compose.migration.yml  docker-compose.ops_p5.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini
backend/: Dockerfile.prod  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/docs/: api_routes.md  billing_phase6.md  comms_phase12.md  grooming_phase9.md  ops_p5.md  payments_phase7.md  portal_phase8.md  report_cards_phase10.md  store_phase11.md
backend/scripts/: dev_seed_admin.py  dev_seed_superadmin.py  encrypt_owner_pii.py  gingr_automap.py  gingr_import.py  gingr_mapping.yaml  seed_capacity_rules.py  seed_pricing.py
backend/tests/: conftest.py  test_accounts.py  test_agreements_icons.py  test_auth_self_service.py  test_billing.py  test_capacity.py  test_capacity_rules.py  test_comms_api.py  test_deposits_api.py  test_documents_webp.py  test_feeding_board.py  test_feeding_medication.py  test_grooming_api.py  test_grooming_reports.py  test_health.py  test_immunizations.py  test_invoice_service.py  test_invoices_api.py  test_locations.py  test_medication_board.py  test_owners_pets.py  test_payments_workflow.py  test_payroll_api.py  test_portal_api.py  test_portal_report_cards_api.py  test_portal_store_api.py  test_pricing_api.py  test_pricing_service.py  test_report_cards_api.py  test_reports.py  test_reservations.py  test_run_cards.py  (+7 more)
(+512 files in other folders)
